[package]
name = "core-rpc"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.4"
clap = "2.34"
# ckb-indexer = { git = "https://github.com/KaoImin/ckb-indexer", branch = "mercury" }
ckb-jsonrpc-types = "0.104"
ckb-types = "0.104"
ckb-dao-utils = "0.104"
ckb-sdk = "1.1"
crossbeam-channel = "0.5"
dashmap = "4.0"
hex = "0.4"
jsonrpsee = { version = "0.13", features = ["full"] } 
jsonrpsee-core = "0.13"
jsonrpsee-proc-macros = "0.13"
lazy_static = "1.4"
log = "0.4"
num-bigint = "0.4"   
num-traits = "0.2" 
once_cell = "1.10"
parking_lot = "0.12"
pprof = { version = "0.6", features = ["flamegraph", "cpp"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "sync"] }

common = { path = "../../../common" }
common-logger = { path = "../../../logger" }
core-ckb-client = { path = "../../ckb-client" }
core-rpc-types = { path = "../types" }
core-storage = { path = "../../storage" }

[dev-dependencies]
env_logger = "0.9"
rand = "0.7"
rbatis = { version = "3.0", default-features = false,  features = ["all-database", "runtime-tokio-native-tls", "upper_case_sql_keyword"] }

core-cli = { path = "../../cli" }
xsql = { path = "../../../db/xsql" }
